[workspace.package]
version = "2.0.8"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ethers"
repository = "https://github.com/gakonst/ethers-rs"
homepage = "https://github.com/gakonst/ethers-rs"
categories = ["cryptography::cryptocurrencies"]
keywords = ["crypto", "ethers", "ethereum", "web3", "celo"]
exclude = [
    ".github/",
    "bin/",
    "book/",
    "**/tests/",
    "**/test-data/",
    "**/testdata/",
    "examples",
    "scripts/",
]

# https://docs.rs/about/metadata
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# https://github.com/integer32llc/rust-playground/blob/c6165a36923db5d99313e6056b5b610a2ede5bb0/top-crates/src/lib.rs#L175-L184
[workspace.metadata.playground]
all-features = true

[workspace]
members = [
    "ethers",
    "ethers-core",
    "ethers-signers"
]

# Do not include example crates in default members
default-members = [
    "ethers",
    "ethers-core",
    "ethers-signers"
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"