[package]
version = "2.0.8"
name = "ethers-core"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
description = "Ethereum data types, cryptography and utilities"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
# abi
open-fastrlp = { version = "0.1.4", features = ["std", "derive", "ethereum-types"] }
rlp = { version = "0.5", features = ["derive"] }
ethabi = { version = "18.0.0", default-features = false, features = ["full-serde", "rlp"] }
arrayvec = { version = "0.7", default-features = false }

# crypto
elliptic-curve = { version = "0.13.4", default-features = false }
generic-array = { version = "0.14.7", default-features = false }
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa"] }
tiny-keccak = { version = "2.0.2", default-features = false }
#rand = "0.8"
#getrandom = { version = "0.2", features = ["js"] }

# misc
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
thiserror = "1.0"
bytes = "1.4"
hex = "0.4"
unicode-xid = "0.2"
strum = { version = "0.25", features = ["derive"] }
num_enum = "0.6"

# macros feature enabled dependencies
cargo_metadata = { version = "0.15.4", optional = true }
syn = { version = "2.0", features = ["extra-traits"] }
