[package]
name = "ethers-middleware"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
description = "Middleware implementations for the ethers-rs crate"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
ethers-core.workspace = true
ethers-signers.workspace = true

async-trait.workspace = true
auto_impl.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
instant.workspace = true

serde_json.workspace = true

[dev-dependencies]

hex.workspace = true
rand.workspace = true
once_cell.workspace = true

[features]
default = []