[package]
version = "2.0.8"
name = "ethers-signers"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
description = "A unified interface for locally signing Ethereum transactions"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
ethers-core = { path = "../ethers-core" }
ethabi = { version = "18.0.0", default-features = false, features = ["full-serde", "rlp"] }
#getrandom = { version = "0.2", features = ["js"] }

# crypto
elliptic-curve = { version = "0.13.4", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
thiserror = { version = "1.0" }

# misc
hex = "0.4"
