[package]
name = "ethers"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "../README.md"
description = "A complete Ethereum and Celo Rust library"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[features]
default = []

# workspace-wide features
legacy = []

# Deprecated
abigen-offline = []
eip712 = []
solc-sha2-asm = []

[dependencies]
ethers-core.workspace = true
ethers-signers.workspace = true